# OpenGLBuildHighPerformanceGraphics

./: .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md
Module1/: CMakeLists.txt  README.md
Module1/Chapter01/: CMakeLists.txt
Module1/Chapter01/Common/: CMakeLists.txt  GL_Wrapper.hpp  ShaderLoader.cpp  ShaderLoader.hpp  common.cpp  common.hpp
Module1/Chapter01/GettingStarted/: CMakeLists.txt  main.cpp
Module1/Chapter01/ImageLoader/: CMakeLists.txt  GLSLShader.cpp  GLSLShader.hpp  main.cpp
Module1/Chapter01/RippleDeformer/: CMakeLists.txt  main.cpp
Module1/Chapter01/SimpleTriangle/: CMakeLists.txt  GLSLShader.cpp  main.cpp
Module1/Chapter01/SimpleTriangle/shaders/: shader.frag  shader.vert
Module1/Chapter01/SubdivisionGeometryShader/: CMakeLists.txt  main.cpp
Module1/Chapter02/: CMakeLists.txt
Module1/Chapter02/Common/: AbstractCamera.cpp  AbstractCamera.hpp  CMakeLists.txt  FreeCamera.cpp  FreeCamera.hpp  GLSLShader.cpp  GLSLShader.hpp  Grid.cpp  Grid.hpp  Plane.cpp  Plane.hpp  RenderableObject.cpp  RenderableObject.hpp  TargetCamera.cpp  TargetCamera.hpp  TexturedPlane.cpp  UnitCube.cpp  UnitCube.hpp
Module1/Chapter02/FreeCamera/: CMakeLists.txt  README.md  main.cpp
Module1/Chapter02/PickingColorBuffer/: CMakeLists.txt  README.md  main.cpp
Module1/Chapter02/PickingDepthBuffer/: CMakeLists.txt  README.md  main.cpp
Module1/Chapter02/PickingSceneIntersection/: CMakeLists.txt  README.md  main.cpp
Module1/Chapter02/TargetCamera/: CMakeLists.txt  main.cpp
Module1/Chapter02/ViewFrustumCulling/: CMakeLists.txt  main.cpp
Module1/Chapter03/: CMakeLists.txt
Module1/Chapter03/Convolution/: CMakeLists.txt  main.cpp
Module1/Chapter03/DynamicCubemap/: CMakeLists.txt  main.cpp
Module1/Chapter03/Glow/: CMakeLists.txt  main.cpp
Module1/Chapter03/MirrorUsingFBO/: CMakeLists.txt  main.cpp
Module1/Chapter03/Skybox/: CMakeLists.txt  main.cpp
Module1/Chapter03/TwirlFilter/: CMakeLists.txt  README.md  main.cpp
Module1/Chapter04/: CMakeLists.txt  README.md
Module1/Chapter04/DirectionalLight/: CMakeLists.txt  main.cpp
Module1/Chapter04/PerFragmentLighting/: CMakeLists.txt  main.cpp
Module1/Chapter04/PerFragmentLighting/shaders/: perFragmentLighting.frag  perFragmentLighting.vert
Module1/Chapter04/PerVertexLighting/: CMakeLists.txt  README.md  main.cpp
Module1/Chapter04/PerVertexLighting/shaders/: GridShader.frag  GridShader.vert  perVertexLighting.frag  perVertexLighting.vert
Module1/Chapter04/ShadowMapping/: CMakeLists.txt  main.cpp
Module1/Chapter04/ShadowMappingPCF/: CMakeLists.txt  main.cpp
Module1/Chapter04/VarianceShadowMapping/: CMakeLists.txt  main.cpp
Module1/Chapter05/: CMakeLists.txt  README.md  main.cpp
Module1/Chapter05/3dsViewer/: 3ds.cpp  3ds.hpp  CMakeLists.txt  README.md  main.cpp
Module1/Chapter05/3dsViewer/shaders/: shader.vert
Module1/Chapter05/EZMeshViewer/: CMakeLists.txt  Ezm.cpp  Ezm.hpp  MeshImport.cpp  MeshImport.h  main.cpp
Module1/Chapter05/ObjViewer/: CMakeLists.txt  Obj.cpp  main.cpp
Module1/Chapter05/SimpleParticles/: CMakeLists.txt  README.md  main.cpp
Module1/Chapter05/TerrainLoading/: CMakeLists.txt  README.md  main.cpp
Module1/Chapter06/: CMakeLists.txt  README.md
Module1/Chapter06/DualDepthPeeling/: CMakeLists.txt  main.cpp
Module1/Chapter06/FrontToBackPeeling/: CMakeLists.txt  main.cpp
Module1/Chapter06/GPUPathtracing/: CMakeLists.txt  main.cpp
Module1/Chapter06/GPURaytracing/: CMakeLists.txt  Obj.cpp  Obj.hpp  main.cpp
Module1/Chapter06/SSAO/: CMakeLists.txt  Obj.hpp  main.cpp
Module1/Chapter06/SphericalHarmonics/: CMakeLists.txt  README.md  main.cpp  main2.cpp
Module1/Chapter07/: CMakeLists.txt  README.md
Module1/Chapter07/3DTextureSlicing/: CMakeLists.txt  main.cpp
Module1/Chapter07/3DTextureSlicingClassification/: CMakeLists.txt  main.cpp
Module1/Chapter08/: CMakeLists.txt
Module1/Chapter08/TransformFeedbackParticles/: CMakeLists.txt  main.cpp
Module1/Common/: AbstractCamera.cpp  AbstractCamera.hpp  CMakeLists.txt  FreeCamera.cpp  GLSLShader.cpp  GLSLShader.hpp  Grid.cpp  Plane.cpp  Plane.hpp  Quad.cpp  Quad.hpp  RenderableObject.cpp  RenderableObject.hpp  Skybox.cpp  Skybox.hpp  TargetCamera.cpp  TexturedPlane.cpp  TexturedPlane.hpp  UnitColorCube.cpp  UnitColorCube.hpp  UnitCube.cpp
Module3/: CMakeLists.txt
Module3/Chapter01/: CMakeLists.txt
Module3/Chapter01/Tutorial1/: CMakeLists.txt  README.md  main.cpp
Module3/Chapter02/: CMakeLists.txt
Module3/Chapter02/00_Point/: CMakeLists.txt  README.md  main.cpp
Module3/Chapter02/01_Line/: CMakeLists.txt  main.cpp
Module3/Chapter02/02_sinusoid/: CMakeLists.txt  main.cpp
Module3/Chapter02/03_ecg/: CMakeLists.txt  ECG_Data.cpp  main.cpp
Module3/Chapter02/04_gaussian/: CMakeLists.txt  main.cpp
Module3/Chapter07/Simple/app/: CMakeLists.txt
Module3/Chapter07/Simple/app/src/androidTest/java/com/ahussein/simple/: ExampleInstrumentedTest.java
Module3/Chapter07/Simple/app/src/main/java/com/ahussein/simple/: GL3JNIView.java
Module3/Chapter1/: CMakeLists.txt
Module3/Chapter1/Tutorial1/: CMakeLists.txt  main.cpp
Module3/Chapter7/Simple/app/: build.gradle
Module3/Chapter7/Simple/app/src/main/: AndroidManifest.xml
Module3/Chapter7/Simple/app/src/main/cpp/: main_simple.cpp
Module3/Chapter7/Simple/app/src/main/java/com/ahussein/simple/: GL3JNILib.java  MainActivity.java
Module3/Chapter7/Simple/app/src/test/java/com/ahussein/simple/: ExampleUnitTest.java
cmake/: FindGL3W.cmake  FindGLFW.cmake  FindGSL.cmake  FindImgui.cmake  conan.cmake  options.cmake
